# mliot-embeddedc-2026-hw

week01/: buoi01_chaunguyenbinh.c
week02/: answer.txt  buoi02_ChauNguyenBinh.c
week03/: answers.txt  build_and_flash.bat
week04/: answers.txt
week04/buoi04_runcodetask5-main.c/: CMakeLists.txt  Downloads - Shortcut.lnk  build_and_flash.bat  build_and_flash.sh  buoi04_ChauNguyenBinh.c  code mau.c  i2c_handler.c  i2c_handler.h  main.c  system_stm32f1xx.c  uart_handler.c  uart_handler.h
week04/docs/: .gitignore
